2003-02-26  Johannes Meixner <jsmeix@suse.de>

	* Changed
	  Kyocera KM-* models comment because all KM-* models are
	  in fact scanners (coperts?) which become a printer by an
	  additional printer board (i.e. the scanner is not "optional").

	  Modified Files:
	  Kyocera-KM-1530.xml Kyocera-KM-1810.xml Kyocera-KM-2030.xml
	  Kyocera-KM-2530.xml Kyocera-KM-3530.xml Kyocera-KM-4230.xml
	  Kyocera-KM-4530.xml Kyocera-KM-5230.xml Kyocera-KM-5530.xml
	  Kyocera-KM-6230.xml

2003-02-26  Johannes Meixner <jsmeix@suse.de>

	* Corrected
	  Kyocera entries according to the information
	  from Markus Brauer <markus.brauer@ktde.de>:
	  - FS-400, FS-850, FS-5500: no duplex option
	  - FS-5500: built-in PS level 1, max. 300dpi, A3
	  - FS-6500, FS-6500+: PJL support
	  - FS-8000C: max. 600dpi
	  - FS-5800C, FS-5900C: PCL: max. 600dpi, PS: max. 1200dpi
	  - FS-9100DN, FS-9500DN: built-in duplex unit, A3
	  - FS-1010, FS-1050: max. 600dpi
	  - all KM-* models: max. 1800x600dpi
	  - KM-1810: new (same entries as the other KM-* models)

	  Modified Files:
	  driver/Postscript.xml driver/lj5gray.xml driver/lj5mono.xml
	  driver/ljet3d.xml driver/ljet4.xml driver/ljet4d.xml
	  driver/pxlmono.xml opt/Postscript-PreFilter.xml
	  opt/Postscript-Resolution.xml printer/Kyocera-FS-1010.xml
	  printer/Kyocera-FS-1050.xml printer/Kyocera-FS-400.xml
	  printer/Kyocera-FS-5500.xml printer/Kyocera-FS-6500.xml
	  printer/Kyocera-FS-6500plus.xml printer/Kyocera-FS-850.xml
	  printer/Kyocera-FS-9100DN.xml printer/Kyocera-FS-9500DN.xml
	  printer/Kyocera-KM-1530.xml printer/Kyocera-KM-2030.xml
	  printer/Kyocera-KM-2530.xml printer/Kyocera-KM-3530.xml
	  printer/Kyocera-KM-4230.xml printer/Kyocera-KM-4530.xml
	  printer/Kyocera-KM-5230.xml printer/Kyocera-KM-5530.xml
	  printer/Kyocera-KM-6230.xml

	  Added Files:
	  printer/Kyocera-KM-1810.xml

2003-02-25  Till Kamppeter <till.kamppeter@gmx.net>

	* 100704.xml, 102304.xml, 136928.xml, 142944.xml, 185033.xml,