@@ -51,11 +51,11 @@
       <driver>pcl3</driver>
       <arg_defval>ev/890</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pxlmono</driver>
       <arg_defval>ev/890</arg_defval>
      </constraint>
-     <constraint sense="true">
+     <constraint sense="false">
       <driver>pxlcolor</driver>
       <arg_defval>ev/890</arg_defval>
      </constraint>
