@@ -1,0 +1,291 @@
+<option type="enum" id="opt/pxlmono-GSResolution">
+  <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+  <arg_longname>
+   <en>GSResolution</en>
+  </arg_longname>
+  <arg_shortname>
+   <en>Resolution</en><!-- backends only know <en> shortnames! -->
+  </arg_shortname>
+  <arg_execution>
+   <arg_group>General</arg_group>
+   <arg_order>100</arg_order>
+   <arg_spot>A</arg_spot>
+   <arg_substitution />
+   <arg_proto> -r%s</arg_proto>
+  </arg_execution>
+  <constraints>
+     <constraint sense="true">
+      <driver>pxlmono</driver>
+      <arg_defval>ev/pxlmono-GSResolution-600x600dpi</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <driver>pxlcolor</driver>
+      <arg_defval>ev/pxlmono-GSResolution-600x600dpi</arg_defval>
+     </constraint>
+  </constraints>
+  <enum_vals>
+   <enum_val id="ev/pxlmono-GSResolution-300x300dpi">
+    <ev_longname>
+     <en>300 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>300x300dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>300x300</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pxlmono-GSResolution-600x600dpi">
+    <ev_longname>
+     <en>600 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>600x600dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>600x600</ev_driverval>
+   </enum_val>
+   <enum_val id="ev/pxlmono-GSResolution-1200x1200dpi">
+    <ev_longname>
+     <en>1200 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>1200x1200dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1200x1200</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <make>Brother</make>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 6</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 5P</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 5L</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 5</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Xerox</make>
+      <model>DocuPrint P1202</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Sharp</make>
+      <model>AR-161</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Samsung</make>
+      <model>ML-4600</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Ricoh</make>
+      <model>Aficio 220</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 6P</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>LaserJet 6L</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 2500</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 4500</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 4550</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 4600</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 5500</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <model>AcuLaser C2000</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <model>AcuLaser C2000PS</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <model>AcuLaser C8500</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <model>AcuLaser C8500PS</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Okidata</make>
+      <model>Okipage 10ex</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Okidata</make>
+      <model>Okipage 14ex</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Xerox-DocuPrint_N4512</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Xerox-DocuPrint_N4512PS</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-1000</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-1000+</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-1200</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-1700+</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-3700+</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-6700</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-7000+</model>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+      <model>FS-9000</model>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Kyocera-FS-1010</printer>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/pxlmono-GSResolution-1200x600dpi">
+    <ev_longname>
+     <en>1200x600 DPI</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>1200x600dpi</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1200x600</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <make>Xerox</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Sharp</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Samsung</make>
+      <model>ML-7050</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Samsung</make>
+      <model>ML-7000/7000P/7000N</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Ricoh</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Kyocera</make>
+     </constraint>
+     <constraint sense="false">
+      <make>IBM</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Fujitsu</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Canon</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Okidata</make>
+      <model>Okipage 10ex</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Okidata</make>
+      <model>Okipage 14ex</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+    </constraints>
+   </enum_val>
+  </enum_vals>
+</option>
