@@ -93,7 +93,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=300 ColorMode=Color Economode=Economy FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=300 ColorMode=Color Economode=Economy FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -161,7 +161,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=300 ColorMode=Grayscale Economode=Economy FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=300 ColorMode=Grayscale Economode=Economy FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -229,7 +229,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=300 ColorMode=Grayscale Economode=Economy FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=300 ColorMode=Grayscale Economode=Economy FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -294,7 +294,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=600 ColorMode=Color Economode=Standard FastRes=On</ev_driverval>
+    <ev_driverval>GSResolution=600 ColorMode=Color Economode=Standard FastRes=On</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -362,7 +362,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=600 ColorMode=Grayscale Economode=Standard FastRes=On</ev_driverval>
+    <ev_driverval>GSResolution=600 ColorMode=Grayscale Economode=Standard FastRes=On</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -430,7 +430,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=600 ColorMode=Grayscale Economode=Standard FastRes=On</ev_driverval>
+    <ev_driverval>GSResolution=600 ColorMode=Grayscale Economode=Standard FastRes=On</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -495,7 +495,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=1200 ColorMode=Color Economode=Standard FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=1200 ColorMode=Color Economode=Standard FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -523,7 +523,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=1200 ColorMode=Grayscale Economode=Standard FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=1200 ColorMode=Grayscale Economode=Standard FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
@@ -551,7 +551,7 @@
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>Resolution=1200 ColorMode=Grayscale Economode=Standard FastRes=Off</ev_driverval>
+    <ev_driverval>GSResolution=1200 ColorMode=Grayscale Economode=Standard FastRes=Off</ev_driverval>
     <constraints>
      <constraint sense="false">
       <driver>pxlmono</driver>
