@@ -1,3 +1,10 @@
+2003-02-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/159.xml, opt/pxlmono-GSResolution.xml
+	  opt/pxlmono-PrintoutMode.xml: Renamed "Resolution" option for
+	  the "pxlmono"/"pxlcolor" drivers to "GSResolution". This is a
+	  preliminary workaround to avoid crashes of OpenOffice.org
+
 2003-02-26  Johannes Meixner <jsmeix@suse.de>
 
 	* Changed
